?? ??? 2011, PHP 5.4.0 RC3
- Core:
  . Fixed bug #60350 (No string escape code for ESC (ascii 27), normally \e).
    (php at mickweiss dot com)
  . Fixed bug #60240 (invalid read/writes when unserializing specially crafted
    strings). (Mike)

- CLI SAPI:
  . Implement FR #60390 (Missing $_SERVER['SERVER_PORT']). (Pierre)

- Intl:
  . Added support for UTS #46. (Gustavo)

- Reflection:
  . Fixed bug #60367 (Reflection and Late Static Binding). (Laruence)

24 Nov 2011, PHP 5.4.0 RC2

- Core:
  . Fixed bug #60227 (header() cannot detect the multi-line header with 
     CR(0x0D)). (rui)
  . Fixed bug #60099 (__halt_compiler() works in braced namespaces). (Felipe)
  . Fixed bug #55874 (GCC does not provide __sync_fetch_and_add on some archs).
    (klightspeed at netspace dot net dot au)
  . Fixed bug #52624 (tempnam() by-pass open_basedir with nonexistent
    directory). (Felipe)
  . Fixed bug #55748 (multiple NULL Pointer Dereference with zend_strndup()) 
    (CVE-2011-4153). (Stas)
  . Fixed invalid free in call_user_method() function. (Felipe)
    
- Zend Engine:
  . Fixed bug #43200 (Interface implementation / inheritence not possible in
    abstract classes). (Felipe)

- CLI SAPI:
  . Fixed bug #60159 (Router returns false, but POST is not passed to requested
    resource). (Laruence)
  . Fixed bug #55759 (memory leak when using built-in server). (Laruence)

- Improved PHP-FPM SAPI:
  . Enhance error log when the primary script can't be open. FR #60199. (fat)
  . Remove EXPERIMENTAL flag. (fat)
  . Added .phar to default authorized extensions. (fat)

- BCmath:
  . Fixed bug #60377 (bcscale related crashes on 64bits platforms) (shm)
  
- Fileinfo:
  . Fixed possible memory leak in finfo_open(). (Felipe)
  . Fixed memory leak when calling the Finfo constructor twice. (Felipe)
  
- Intl:
  . Fixed memory leak in several Intl locale functions. (Felipe)
  
- Mbstring
  . Fixed bug #60306 (Characters lost while converting from cp936 to utf8).
    (Laruence)